--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-scroll": "^1.9.0",
     "remixicon": "^4.2.0",
     "tailwind-merge": "^2.3.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
